--- a/main.bib
+++ b/main.bib
@@ -3402,3 +3402,28 @@
  @article{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993, title={Distortion invariant object recognition in the dynamic link architecture}, volume={42}, ISSN={00189340}, DOI={10.1109/12.210173}, number={3}, journal={IEEE Transactions on Computers}, author={Lades, M. and Vorbruggen, J.C. and Buhmann, J. and Lange, J. and von der Malsburg, C. and Wurtz, R.P. and Konen, W.}, year={1993}, month={Mar}, pages={300–311} }
 
  @article{Bienenstock_vonderMalsburg_1987, title={A Neural Network for Invariant Pattern Recognition}, volume={4}, ISSN={0295-5075, 1286-4854}, DOI={10.1209/0295-5075/4/1/020}, number={1}, journal={Europhysics Letters (EPL)}, author={Bienenstock, Elie and {von der Malsburg}, Christoph}, year={1987}, month={Jul}, pages={121–126} }
+
+ @inbook{Mohebali_Tahmassebi_Meyer_Baese_Gandomi_2020, title={Probabilistic neural networks}, ISBN={978-0-12-816514-0}, url={https://linkinghub.elsevier.com/retrieve/pii/B978012816514000014X}, DOI={10.1016/B978-0-12-816514-0.00014-X}, booktitle={Handbook of Probabilistic Models}, publisher={Elsevier}, author={Mohebali, Behshad and Tahmassebi, Amirhessam and Meyer-Baese, Anke and Gandomi, Amir H.}, year={2020}, pages={347–367}, language={en} }
+
+ @article{Specht_1967, title={Generation of Polynomial Discriminant Functions for Pattern Recognition}, volume={EC-16}, ISSN={0367-7508}, DOI={10.1109/PGEC.1967.264667}, number={3}, journal={IEEE Transactions on Electronic Computers}, author={Specht, Donald F.}, year={1967}, month={Jun}, pages={308–319} }
+
+ @article{Specht_1990, title={Probabilistic Neural Networks}, volume={3}, ISSN={08936080}, DOI={10.1016/0893-6080(90)90049-Q}, number={1}, journal={Neural Networks}, author={Specht, Donald F.}, year={1990}, month={Jan}, pages={109–118}, language={en} }
+
+ @article{Zeinali_Story_2017, title={Competitive Probabilistic Nneural Network}, volume={24}, ISSN={10692509, 18758835}, DOI={10.3233/ICA-170540}, number={2}, journal={Integrated Computer-Aided Engineering}, author={Zeinali, Yasha and Story, Brett A.}, year={2017}, month={Mar}, pages={105–118} }
+
+@online{sdp_mountain,
+  title        = {Sandro del Prete - Mountain Spirit in Winter},
+  author       = {Impossible World},
+  year         = 2023,
+  url          = {https://im-possible.info/english/art/delprete/the-master-of-illusions/008.html},
+  urldate      = {2023-06-10}
+}
+
+ @article{Ahmad_Hawkins_2015, title={Properties of Sparse Distributed Representations and their Application to Hierarchical Temporal Memory}, url={http://arxiv.org/abs/1503.07469}, abstractNote={Empirical evidence demonstrates that every region of the neocortex represents information using sparse activity patterns. This paper examines Sparse Distributed Representations (SDRs), the primary information representation strategy in Hierarchical Temporal Memory (HTM) systems and the neocortex. We derive a number of properties that are core to scaling, robustness, and generalization. We use the theory to provide practical guidelines and illustrate the power of SDRs as the basis of HTM. Our goal is to help create a unified mathematical and practical framework for SDRs as it relates to cortical function.}, note={arXiv:1503.07469 [cs, q-bio]}, number={arXiv:1503.07469}, publisher={arXiv}, author={Ahmad, Subutai and Hawkins, Jeff}, year={2015}, month={Mar} }
+
+
+ @article{Akhtar_Mian_2018, title={Threat of Adversarial Attacks on Deep Learning in Computer Vision: A Survey}, volume={6}, ISSN={2169-3536}, DOI={10.1109/ACCESS.2018.2807385}, journal={IEEE Access}, author={Akhtar, Naveed and Mian, Ajmal}, year={2018}, pages={14410–14430} }
+
+ @article{Gabor_1946, title={Theory of communication. Part 1: The Analysis of Information}, volume={93}, ISSN={2054-0604}, DOI={10.1049/ji-3-2.1946.0074}, number={26}, journal={Journal of the Institution of Electrical Engineers - Part III: Radio and Communication Engineering}, author={Gabor, D.}, year={1946}, month={Nov}, pages={429–441}, language={en} }
+
+ @article{Granlund_1978, title={In Search of a General Picture Processing Operator}, volume={8}, ISSN={0146664X}, DOI={10.1016/0146-664X(78)90047-3}, number={2}, journal={Computer Graphics and Image Processing}, author={Granlund, Goesta H.}, year={1978}, month={Oct}, pages={155–173}, language={en} }
